Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


* Heavy doc fixups, including fixing the man pages to actually be
  readable.  New man page for pmerge added.

* Fix py3k incompatibility in pmerge -N .

* prefix branch was merged.  This fleshes out the majority of prefix
  support; extended-versions currently aren't supported however.

* pkgcore now forces parallelization for tbz2 generation if pbzip2
  is installed.

* Python stdlib's BZ2File doesn't handle multiple streams in a bz2
  file correctly- we work around this via always forcing bzip2 -dc
  unless the python version is 3.3 or later.


pkgcore 0.7.7.8: Jan 26th, 2011

* pkgcore's merger now will preserve any hardlinks specified in the
  merge set.  Merges straight from binpkgs don't current preserve
  hardlinks.

* added hardlink awareness to splitdebug and stripping.  For pkgs
  that install hardlinks (git for example), this fixes double stripping
  and complaints output during merging for trying to splitdebug it.
  Bit faster in addition since for git, it cuts the splitdebug down
  from 110 to 7 or so.

* Fix incompatibilities in pinspect portageq api that eselect uses.
  Eselect will be updated to use better api's moving forward, but
  till then restore support.

* pinspect portageq and pinspect query envvar now return space delimited
  string values if the queried value was a list.

* Fix bug where use dep forced changes to use state weren't honored
  at the build level.

* Fix fairly serious bug where immutable use flags (arch for example),
  wasn't being enforced for pkg dependency calculations.


pkgcore 0.7.7.7: Jan 24th, 2011

* pkgcore resolver now understand weak blockers.  This fixes a long
  standing issue where portage/paludis would allow a transaction that
  pkgcore would refuse (at the time of pkgcore's creation, weak/strong
  didn't exist- just strong).
